--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,14 @@
     <string name="q_frequency">Domyślna częśtotliwość strojenia gitary to 440hz</string>
     <string name="correct_anwser">Odpowiedziałeś poprawnie!</string>
     <string name="incorrect_anwser">Odpowiedziałeś błędnie!</string>
+    <string name="title_activity_prompt">PromptActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="anwser_was_shown">Podpowiedź była już wyświetlona!</string>
 </resources>
